- created the mutest_start macro, cleaned up the assertion routines.
- Created test flavors.  Now it's easy for people to customize their asserts.
- Split mutest from tmtest's zutest.c/.h files.
- Got rid of mutest_proc, now clients handle calling the unit tests 100%

Version 0.7,  16 Feb 2007
- turn dependency tree into functions

Version 0.62, 22 Jan 2007
- clean up failure messages

Version 0.61, 30 Apr 2006 
- first version worth releasing


Would be nice but might never happen:
- Add the optional ability to fork before each test.  It's a pretty useless
  feature but some guys seem pretty hot about this.
  - "A test could crash and fool the framework into thinking that it passed!"
    - Erm, you're probably more likely to be hit by lightning.
  - This would allow the ability to specify an optional timeout.
- AssertStrEmpty and AssertStrNonEmpty suck.  Clean them up?
  - It won't be easy...  They work well.
- Make it easy to temporarily disable tests.
- Potential command-line arguments we could support:
  --list: lists unit tests without actually running them.
  --skip=NAME: specify unit tests that should be skipped in this run.
  --exit-on-first-error: for when you're only interested in a red/green report.
- It's lame that I need to declare the test function and start the test
  separately.  Make a macro so I can just cunit_test(ints) { ... }
  - I can't figure out an acceptable macro.  :(  It's especially hard
    because the function and the for loop can't share the same '}'.
- Add an epsilon to the floating point comparisons?
  - This is a little scary...  it can confuse the heck out of you if
    you don't know exactly what's going on, make things MORE complex.
  - Don't add until someone wants it and knows how to do it right.
- Make ctest's asserts behave more like regular asserts when used outside
  a ctest_start block.  Raise signals, disappear when NDEBUG is set, etc.
  - not worth the trouble: just #include <assert.h> if you want asserts.